--- a/salvaAuto/index.css
+++ b/salvaAuto/index.css
@@ -141,6 +141,8 @@ a{
 
 /*///////////////////////////////////////////////*/
 
+
+
 .logoAuto{
     background-image: url("../salvaAuto/img/_logo.png");
     background-repeat: no-repeat;
@@ -155,3 +157,88 @@ a{
 	font-family: PlayfairDisplay;
     letter-spacing: 0.3rem;
 }   
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+}
+
+.btn{
+    font-family: salva;
+    font-size: 30px;
+    letter-spacing: 0.29rem;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+
+    padding: 10px;
+    border: none;
+    z-index: 1;
+    -webkit-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.btn:hover {
+    background: #000;
+    color: #fefee2;
+}
+.btn:before,
+.btn:after {
+    position: absolute;
+    content: "";
+    left: 0;
+    width: 100%;
+    height: 50%;
+    right: 0;
+    z-index: -1;
+    background: #fefee2;
+    transition: all 0.3s ease;
+}
+.btn:before {
+    top: 0;
+}
+.btn:after {
+    bottom: 0;
+}
+.btn:hover:before,
+.btn:hover:after {
+    height: 0;
+    background-color: #000;
+}
+
+.line-load{
+    border: 1px solid #fefee2;
+    height: 100px;
+    width: 1px;
+    position: absolute;
+    left: 50%;
+    margin-left: -3px;
+    bottom: 0;
+    overflow: hidden;
+}
+
+.line{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 50px;
+    background: black;
+    top: 0%;
+}
+ 
+.line{
+    top: -100%;
+    animation: load 2s linear infinite;
+}
+
+@keyframes load{
+    0%{
+        top: -100%;
+    }
+    100%{
+        top: 100%;
+    }
+}
