--- a/salvaAuto/index.css
+++ b/salvaAuto/index.css
@@ -3,6 +3,73 @@
     padding: 0;
 }
 
+@-webkit-keyframes swing
+{
+    15%
+    {
+        -webkit-transform: translateX(5px);
+        transform: translateX(5px);
+    }
+    30%
+    {
+        -webkit-transform: translateX(-5px);
+       transform: translateX(-5px);
+    } 
+    50%
+    {
+        -webkit-transform: translateX(3px);
+        transform: translateX(3px);
+    }
+    65%
+    {
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+    }
+    80%
+    {
+        -webkit-transform: translateX(2px);
+        transform: translateX(2px);
+    }
+    100%
+    {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+@keyframes swing
+{
+    15%
+    {
+        -webkit-transform: translateX(5px);
+        transform: translateX(5px);
+    }
+    30%
+    {
+        -webkit-transform: translateX(-5px);
+        transform: translateX(-5px);
+    }
+    50%
+    {
+        -webkit-transform: translateX(3px);
+        transform: translateX(3px);
+    }
+    65%
+    {
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+    }
+    80%
+    {
+        -webkit-transform: translateX(2px);
+        transform: translateX(2px);
+    }
+    100%
+    {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+
 @font-face{
     src: url('../SALVA_AUTO/font/NotoSerifDisplay-ExtraCondensed.ttf');
     font-family: salva;
@@ -36,6 +103,7 @@ body{
     top: 0;
     z-index: 1;
     display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 60px;
     background: #fefefe;
@@ -56,11 +124,19 @@ body{
 .navbar ul li a {
     text-decoration: none;
     text-transform: uppercase;
+    letter-spacing: 0.4rem;
     color: black;
 }
 
-.navbar ul li a:hover {
+/* .navbar ul li a:hover {
     color: blue;
+} */
+
+.swing:hover{
+    -webkit-animation: swing 1s ease;
+    animation: swing 1s ease;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
 }
 
 section {
