--- a/salvaAuto/index.css
+++ b/salvaAuto/index.css
@@ -128,10 +128,6 @@ body{
     color: black;
 }
 
-/* .navbar ul li a:hover {
-    color: blue;
-} */
-
 .swing:hover{
     -webkit-animation: swing 1s ease;
     animation: swing 1s ease;
@@ -157,6 +153,7 @@ section h1{
 section p {
     font-size: 1.5rem
 }
+
 
 /*//////////////////////////////////////////////////////////*/
 
@@ -231,7 +228,7 @@ section p {
     border: 1px solid #fefee2;
     height: 100px;
     width: 1px;
-    position: absolute;
+    position: static;
     left: 50%;
     margin-left: -3px;
     bottom: 0;
@@ -241,7 +238,7 @@ section p {
 .line{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: relative;
     border-radius: 50px;
     background: black;
     top: 0%;
